# gooey

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.codex/environments/: environment.toml
docs/: 2026-04-14-gooey-vision.md  2026-04-15-gooey-v0-spec.md  gooey-vision.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs  provider_auth.rs  recent.rs  recent_tests.rs
src/components/: MainPanel.tsx  Sidebar.tsx  TitleBar.tsx
src/components/main-panel/: ComposerModelSelector.tsx  MainPanelPromptDock.tsx  OpenAIProviderConnectionDetails.tsx  PromptComposerShell.tsx  ProviderConnectionMethodOption.tsx  ProvidersSettingsPanel.tsx  SettingsPanelContent.tsx
src/components/sidebar/: ChatSidebarContent.tsx  ProjectActivityChip.tsx  ProjectsHeaderButton.tsx  ProjectsSection.tsx  SessionRow.tsx  SessionStatusIndicator.tsx  SettingsSidebarContent.tsx  SidebarIconButton.tsx  WorkspaceGroup.tsx  mockSidebarData.ts  types.ts
src/components/ui/: DropdownMenu.tsx  Kbd.tsx  MainSidebarButton.tsx  SidebarItemButton.tsx  Tooltip.tsx
src/lib/: backend.ts  errors.ts  relativeTime.ts
src/state/: useGooeyStore.ts
src/types/: gooey.ts  providers.ts  settings.ts
