[package]
name = "gooey"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "gooey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.10.2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
chrono = { version = "0.4.44", features = ["clock", "std", "serde"] }
uuid = { version = "1.23.1", features = ["v4", "fast-rng"] }
tauri-plugin-dialog = "2.7.0"
